<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26AAD3">

    <ScrollView
        android:id="@+id/scrollableContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_desc_en"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_en"
                android:textSize="38sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/space_grotesk" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginVertical="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_notify_h_en"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/space_grotesk"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:paddingVertical="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_1_text_en"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:fontFamily="@font/space_grotesk"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_1_desc_en"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/space_grotesk"/>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_lens_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text=""
                    app:thumbTint="@color/switch_thumb_color"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:paddingVertical="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_2_text_en"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:fontFamily="@font/space_grotesk"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_2_desc_en"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/space_grotesk"/>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_daily_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text=""
                    app:thumbTint="@color/switch_thumb_color"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginVertical="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_h_en"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/space_grotesk"/>

            <TextView
                android:id="@+id/privacyPolicyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_politycy_en"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:fontFamily="@font/space_grotesk"
                android:maxLines="8"
                android:ellipsize="end"/>

            <Button
                android:id="@+id/expandCollapseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_more_en"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_1_en"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/space_grotesk"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
